# lyrics-micro-services

./: README.md
backend/api-gateway/: pyproject.toml
backend/api-gateway/app/: main.py
backend/api-gateway/app/api/: __init__.py
backend/api-gateway/app/api/auth/: __init__.py  router.py
backend/api-gateway/app/core/: config.py
backend/api-gateway/app/service/http/: __init__.py  auth_service.py
backend/auth-service/: .env.template  docker-compose.yml  pyproject.toml
backend/auth-service/app/: main.py
backend/auth-service/app/alembic/versions/: 2025_12_13_1051-9d0d1cf1f02c_first.py
backend/auth-service/app/api/: __init__.py
backend/auth-service/app/api/api_v1/: __init__.py  auth.py  fastapi_users.py
backend/auth-service/app/api/dependencies/authentication/: __init__.py  access_tokens.py  user_manager.py  users.py
backend/auth-service/app/core/: config.py  faststream_broker.py  taskiq_broker.py
backend/auth-service/app/core/authentication/: __init__.py  transport.py  user_mananger.py
backend/auth-service/app/core/models/: __init__.py  access_token.py  base.py  db_helper.py  user.py
backend/auth-service/app/core/models/mixins/: __init__.py
backend/auth-service/app/repository/: user.py
backend/auth-service/app/service/http/: notify_service.py
backend/auth-service/app/service/users/: __init__.py  services.py
backend/auth-service/app/tasks/: __init__.py  login.py  welcome_email_tasks.py
backend/music-service/: docker-compose.yml  pyproject.toml
backend/music-service/app/: main.py
backend/music-service/app/alembic/versions/: d8760a7ad644_first.py
backend/music-service/app/api/: __init__.py
backend/music-service/app/api/author/: __init__.py  router.py
backend/music-service/app/core/: config.py
backend/music-service/app/core/models/: __init__.py  author.py  base.py  db_helper.py
backend/music-service/app/core/schemas/: author.py
backend/music-service/app/repository/: author.py
backend/music-service/app/service/: author.py
backend/music-service/app/service/auth_external/: __init__.py  service.py
backend/notify-service/: docker-compose.yml  pyproject.toml
backend/notify-service/app/: main.py
backend/notify-service/app/api/: __init__.py
backend/notify-service/app/core/: config.py
frontend/auth-service/: package-lock.json  package.json
frontend/auth-service/src/: App.jsx  main.jsx
frontend/auth-service/src/compontents/: AuthForm.jsx
frontend/auth-service/src/context/: AuthContext.jsx
frontend/auth-service/src/pages/: Dashboard.jsx  Home.jsx  LoginPage.jsx  RegisterPage.jsx
frontend/auth-service/src/services/: api.js  api.jsx
(+4 files in other folders)
