[project]
name = "api-gateway"
version = "0.1.0"
description = ""
authors = [
    {name = "HELAFUG",email = "loxand42@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
