[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "HELAFUG",email = "loxand42@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "black (>=25.12.0,<26.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "fastapi-users[sqlalchemy] (>=15.0.1,<16.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "taskiq (>=0.12.1,<0.13.0)",
    "taskiq-aio-pika (>=0.5.0,<0.6.0)",
    "taskiq-fastapi (>=0.4.0,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
